Fix flag circle alignment

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -85,7 +85,7 @@
   background-color: #51B3AB;
   border-radius: 22.5px;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: center;
 }
 
